config: don't shutdown the libhal ctx if it failed to initialize (#23213)

Regression introduced by b1c3dc6ae226db178420e3b5f297b94afc87c94c.
Shutting down the libhal_ctx if the init failed may cause an abort.
This can happen if hald is not yet running at server startup.

X.Org Bug 23213 <http://bugs.freedesktop.org/show_bug.cgi?id=23213>

Tested-by: Stefan Dirsch
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>